start changes to Java 14 syntax